--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <title>Ankieta Pożyczkowa</title>
 <meta name="description" content="Znajdź Idealną Pożyczkę to interaktywny formularz, który pomaga użytkownikom znaleźć najlepsze pożyczki w zależności od celu, dochodów i potrzeb. Odpowiedz na pytania i uzyskaj dopasowane rozwiązania.">
